--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                             <label>brithday :</label>
                             <h5 class="brithday">09-07-1958</h5>
                             <label>acting role :</label>
-                            <h5 class="occupation">occupation</h5>
+                            <h5 class="occupation">high school Chemistry</h5>
                             <label>NikName :</label>
-                            <h5 class="NikName">occupation</h5>
+                            <h5 class="NikName">Heisenberg</h5>
                         </div>
             </div>
         </div>
